# ai--

./: .env.example  .gitignore  README.md  dev_server.py  pyproject.toml  qq_ai_girlfriend_engineering_project_book.md
app/: __init__.py  chat_service.py  config.py  llm_gateway.py  local_model.py  main.py  persona.py  persona_events.py  persona_import.py  storage.py  time_context.py
app/memory/: __init__.py  audit.py  audit_status.md  calibration.py  context.py  correction.py  extraction.py  extractors.py  feedback.py  followup.py  hygiene.py  initiative.py  intent.py  lifecycle.py  maintenance.py  params.py  profile.py  quality.py  recall.py  reflection.py  report.md  schema.py  semantic.py  signals.py  summary.py  text.py  turns.py  (+2 more)
data/: manual_memory_eval.example.jsonl  memory_calibration_cases.json
data-e2e/: store.json
docs/: audit_codex-audit-memory-idea_2026-07-03.md  audit_codex-local-model-lmstudio-experiment_2026-07-16.md  audit_codex-memory-post-merge-iteration_2026-07-03.md  audit_codex-persona-import-learning_2026-07-16.md  branch_report_codex-persona-import-learning_2026-07-04.md  current_project_state_2026-07-04.md  lmstudio_backend_pilot_report_2026-07-04.md  lmstudio_backend_pilot_results_2026-07-04.json  local_small_model_backend_feasibility_2026-07-04.md  memory_manual_tuning.md
scripts/: analyze_memory_feedback.py  evaluate_memory_calibration.py  migrate_json_to_sqlite.py  run_deepseek_flash_user_test.py  run_lmstudio_backend_pilot.py  summarize_manual_memory_eval.py
tests/: test_core.py  test_persona_entities.py  test_persona_events.py
(+4 files in other folders)
