[project]
name = "virtual-friend-chat"
version = "0.1.0"
description = "First-stage AI virtual friend chat MVP with DeepSeek-V4 gateway, persona initialization, and layered memory."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
